objects/ASI_CRM_CN_T1_Price__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Item_Group__c</fullName>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>T1 Price</relationshipLabel>
        <relationshipName>T1_Price</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_T1_Price__c</fullName>
        <label>T1 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_T2_Price__c</fullName>
        <label>T2 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>T1 Price</label>
    <listViews>
        <fullName>ASI_CRM_CN_T1_Price</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Effective_Date__c</columns>
        <columns>ASI_CRM_CN_Item_Group__c</columns>
        <columns>ASI_CRM_CN_T1_Price__c</columns>
        <columns>ASI_CRM_CN_T2_Price__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_CRM_CN_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_T1_Price__c.ASI_CRM_CN_T1_Price</value>
        </filters>
        <label>CN T1 Price</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_T1_Price</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Effective_Date__c</columns>
        <columns>ASI_CRM_CN_Item_Group__c</columns>
        <columns>ASI_CRM_CN_T1_Price__c</columns>
        <columns>ASI_CRM_CN_T2_Price__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_CRM_CN_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_T1_Price__c.ASI_CRM_CN_T1_Price</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Item_Group__c</field>
            <operation>contains</operation>
            <value>Chivas Regal 12 YO</value>
        </filters>
        <label>CN T1 Price-li</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>T1P-{0000000}</displayFormat>
        <label>T1 Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T1 Price</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_T1_Price</fullName>
        <active>true</active>
        <label>CN T1 Price</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>